# iri_laser_icp

./: CMakeLists.txt  README.md  mainpage.dox  manifest.xml  package.xml
cfg/: LaserIcp.cfg  laser_icp_alg_config.cfg
config/: laser_icp_server.yaml
csm/: GetCSM.cmake
docs/: LaserIcpConfig-usage.dox
include/: laser_icp_alg.h  laser_icp_alg_node.h
include/iri_laser_icp/: laser_icp_alg.h  laser_icp_server.h
launch/: laser_icp_server.launch  test.launch
scripts/: test_laser_icp.py
src/: laser_icp_alg.cpp  laser_icp_alg_node.cpp  laser_icp_server.cpp
srv/: GetRelativePose.srv
