<?xml version="1.0"?>
<package>
  <name>iri_laser_icp</name>
  <version>1.0.0</version>
  <description>Laser ICP based in the library Canonical Scan Matcher (CSM)</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="labrobotica@iri.upc.edu">labrobotica</maintainer>
  <maintainer email="mmorta@iri.upc.edu">Marti Morta</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>LGPL</license>

  <!-- Url tags are optional, but mutiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <url type="website">http://wiki.ros.org/iri_laser_icp</url>
  <url type="website">http://censi.mit.edu/software/csm</url>
  <url type="website">https://github.com/AndreaCensi/csm</url>

  <!-- Author tags are optional, mutiple are allowed, one per tag -->
  <!-- Authors do not have to be maintianers, but could be -->
  <author email="mmorta@iri.upc.edu">Marti Morta</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- ****************************************************************** -->
  <!--                 Place build dependencies here                      -->
  <!-- ****************************************************************** -->
    <build_depend>libgsl</build_depend>
    <build_depend>tf</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>iri_base_algorithm</build_depend>
    <build_depend>message_generation</build_depend>

  <!-- ****************************************************************** -->
  <!--                   Place run dependencies here                      -->
  <!-- ****************************************************************** -->
    <run_depend>tf</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>nav_msgs</run_depend>
    <run_depend>iri_base_algorithm</run_depend>
    <run_depend>message_generation</run_depend>

  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <!-- <cpp cflags="-I${prefix}/srv/cpp"/> -->
  </export>
</package>
