<?xml version="1.0"?>
<package>
  <name>iri_laser_icp</name>
  <version>1.0.0</version>
  <description>Laser ICP based in the library Canonical Scan Matcher (CSM)</description>

  <maintainer email="labrobotica@iri.upc.edu">labrobotica</maintainer>
  <maintainer email="mmorta@iri.upc.edu">Marti Morta</maintainer>

  <license>LGPL</license>

  <url type="website">http://wiki.ros.org/iri_laser_icp</url>
  <url type="website">http://censi.mit.edu/software/csm</url>
  <url type="website">https://github.com/AndreaCensi/csm</url>

  <author email="mmorta@iri.upc.edu">Marti Morta</author>

  <build_depend>libgsl</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>iri_base_algorithm</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>iri_base_algorithm</run_depend>
  <run_depend>message_generation</run_depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
